<resources>
    <string name="app_name">Canvas</string>
    <string name="action_settings">Settings</string>
    <string name="action_erase">Erase</string>
    <string name="action_delete">Delete</string>
    <string name="action_undo">Undo</string>
    <string name="action_save">Save</string>
    <string name="action_color">Color Picker</string>
    <string name="action_brush">Brush Size</string>
    <string name="delete_drawing">Delete Drawing!</string>
    <string name="new_drawing_warning">Your current drawing will be completely erased, do you want to proceed?</string>
    <string name="action_redo">Redo</string>
    <string name="action_share">Share</string>
    <string name="label_brush_size">Brush Size:</string>
    <string name="variableWidth">Variable Width</string>
    <string name="fixedWidth">Fixed Width</string>
</resources>
